--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>issabbaneg</title>
 </head>
 <body>
-    
+    <nav class="d-flex justify-content-evenly  border-blue border-bottom  border-5 " >
+        <div class="py-3">
+            <img src="./public/images/logo.png" alt="">
+        </div>
+        <ul class="d-flex list-unstyled align-items-center ">
+            <li><a class="text-decoration-none mx-2 text-gray link-info  " href="#">home</a></li>
+            <li><a class="text-decoration-none mx-2 text-gray link-info " href="#">lorem</a></li>
+            <li><a class="text-decoration-none mx-2 text-gray link-info " href="#">lorem</a></li>
+            <li><a class="text-decoration-none mx-2 text-gray link-info " href="#">lorem</a></li>
+            <li><a class="text-decoration-none mx-2 text-gray link-info " href="#">lorem</a></li>
+            <li><a class="text-decoration-none mx-3 text-gray link-info " href="#">lorem</a></li>
+            <li><a class="text-decoration-none me-5 text-gray link-info " href="#">lorem</a></li>
+            <li><a class="text-decoration-none " href="#"><i class="fa-solid fa-magnifying-glass" style="color: #a7a7a7;"></i></a></li>
+        </ul>
+    </nav>
 </body>
 </html>
