--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="./public/css/app.css">
     <title>issabbaneg</title>
 </head>
+
 <body>
-    <nav class="d-flex justify-content-evenly  border-blue border-bottom  border-5 " >
+    <nav class="d-flex justify-content-evenly  border-blue border-bottom  border-5 ">
         <div class="py-3">
             <img src="./public/images/logo.png" alt="">
         </div>
@@ -20,8 +22,33 @@
             <li><a class="text-decoration-none mx-2 text-gray link-info " href="#">lorem</a></li>
             <li><a class="text-decoration-none mx-3 text-gray link-info " href="#">lorem</a></li>
             <li><a class="text-decoration-none me-5 text-gray link-info " href="#">lorem</a></li>
-            <li><a class="text-decoration-none " href="#"><i class="fa-solid fa-magnifying-glass" style="color: #a7a7a7;"></i></a></li>
+            <li><a class="text-decoration-none " href="#"><i class="fa-solid fa-magnifying-glass"
+                        style="color: #a7a7a7;"></i></a></li>
         </ul>
     </nav>
+    <main>
+        <section class="mt-5 ">
+            <div class="pb-5">
+                <h1 class="text-center">WELCOME TO FAITH CHURCH</h1>
+                <P class="text-center text-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel deleniti
+                    sit quasi, tempora exercitationem expedita.</P>
+            </div>
+            <div class="d-flex container w-75 mt-5 ">
+                <div class="me-5 mt-5 ps-5 ">
+                    <h2>did not find your package feel free to ask us . we'll make it for you</h2>
+                    <p class="text-gray mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nisi
+                        delectus architecto. Explicabo, harum quo soluta aliquam quis alias, debitis consequuntur
+                        ratione inventore tenetur autem quae veniam rerum nulla dolorem est necessitatibus hic iusto
+                        dignissimos doloribus. Similique voluptatem fuga tenetur!</p>
+                    <p class="btn btn btn-outline-gray mt-4">READ FULL STORY</p>
+                </div>
+                <div class="ms-5">
+                    <img src="./public/images/about.jpg" alt="">
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
+
 </html>
