end section.spreading-light

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </ul>
     </nav>
     <main>
-        <section class="mt-5 ">
+        <!-- section container -->
+        <section class="mt-5 pb-5 ">
             <div class="pb-5">
                 <h1 class="text-center">WELCOME TO FAITH CHURCH</h1>
                 <P class="text-center text-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel deleniti
@@ -47,6 +48,36 @@
                 </div>
             </div>
 
+        </section>
+        <!-- section gid -->
+        <section >
+            <div class="container-fluid mt-5">
+                <div class="row ">
+                  <div class="col bg-blue text-light p-5 me-1 ">
+                    <h1 class="mt-3 ">spreading light to world</h1>
+                    <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora architecto mollitia autem? Exercitationem maiores officia et ve
+                        niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
+                    <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
+                  </div>
+                  <div class="col bg-dark-blue text-light p-5 me-1">
+                    <h1 class="mt-3 ">spreading light to world</h1>
+                    <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora architecto mollitia autem? Exercitationem maiores officia et ve
+                        niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
+                    <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
+                  </div>
+                  <div class="col bg-blue text-light p-5 me-1">
+                    <h1 class="mt-3 ">spreading light to world</h1>
+                    <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora architecto mollitia autem? Exercitationem maiores officia et ve
+                        niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
+                    <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
+                  </div>
+                  <div class="col bg-dark-blue text-light p-5 ">
+                    <h1 class="mt-3 ">spreading light to world</h1>
+                    <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora architecto mollitia autem? Exercitationem maiores officia et ve
+                        niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
+                    <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
+                  </div>
+              </div>
         </section>
     </main>
 </body>
