--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>issabbaneg</title>
 </head>
 
-<body>
+<body >
     <nav class="d-flex justify-content-evenly  border-blue border-bottom  border-5 ">
         <div class="py-3">
             <img src="./public/images/logo.png" alt="">
@@ -35,13 +35,13 @@
                     sit quasi, tempora exercitationem expedita.</P>
             </div>
             <div class="d-flex container w-75 mt-5 ">
-                <div class="me-5 mt-5 ps-5 ">
+                <div class="me-5  mt-2 ps-5 ">
                     <h2>did not find your package feel free to ask us . we'll make it for you</h2>
-                    <p class="text-gray mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nisi
+                    <p class="text-gray ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nisi
                         delectus architecto. Explicabo, harum quo soluta aliquam quis alias, debitis consequuntur
                         ratione inventore tenetur autem quae veniam rerum nulla dolorem est necessitatibus hic iusto
                         dignissimos doloribus. Similique voluptatem fuga tenetur!</p>
-                    <p class="btn btn btn-outline-gray mt-4">READ FULL STORY</p>
+                    <p class="btn btn btn-outline-gray  mt-3 ">READ FULL STORY</p>
                 </div>
                 <div class="ms-5">
                     <img src="./public/images/about.jpg" alt="">
@@ -50,36 +50,55 @@
 
         </section>
         <!-- section gid -->
-        <section >
+        <section>
             <div class="container-fluid mt-5">
                 <div class="row ">
-                  <div class="col bg-blue text-light p-5 me-1 ">
-                    <h1 class="mt-3 ">spreading light to world</h1>
-                    <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora architecto mollitia autem? Exercitationem maiores officia et ve
-                        niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
-                    <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
-                  </div>
-                  <div class="col bg-dark-blue text-light p-5 me-1">
-                    <h1 class="mt-3 ">spreading light to world</h1>
-                    <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora architecto mollitia autem? Exercitationem maiores officia et ve
-                        niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
-                    <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
-                  </div>
-                  <div class="col bg-blue text-light p-5 me-1">
-                    <h1 class="mt-3 ">spreading light to world</h1>
-                    <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora architecto mollitia autem? Exercitationem maiores officia et ve
-                        niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
-                    <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
-                  </div>
-                  <div class="col bg-dark-blue text-light p-5 ">
-                    <h1 class="mt-3 ">spreading light to world</h1>
-                    <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora architecto mollitia autem? Exercitationem maiores officia et ve
-                        niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
-                    <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
-                  </div>
-              </div>
+                    <div class="col bg-blue text-light p-5 me-1 ">
+                        <h1 class="mt-3 ">spreading light to world</h1>
+                        <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora
+                            architecto mollitia autem? Exercitationem maiores officia et ve
+                            niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
+                        <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
+                    </div>
+                    <div class="col bg-dark-blue text-light p-5 me-1">
+                        <h1 class="mt-3 ">spreading light to world</h1>
+                        <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora
+                            architecto mollitia autem? Exercitationem maiores officia et ve
+                            niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
+                        <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
+                    </div>
+                    <div class="col bg-blue text-light p-5 me-1">
+                        <h1 class="mt-3 ">spreading light to world</h1>
+                        <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora
+                            architecto mollitia autem? Exercitationem maiores officia et ve
+                            niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
+                        <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
+                    </div>
+                    <div class="col bg-dark-blue text-light p-5 ">
+                        <h1 class="mt-3 ">spreading light to world</h1>
+                        <p class="mt-3 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi sit tempora
+                            architecto mollitia autem? Exercitationem maiores officia et ve
+                            niam, saepe temporibus sapiente at, nostrum vero, natus amet vel.</p>
+                        <button class=" btn bg-light rad  rounded-0 mt-3">View Details</button>
+                    </div>
+                </div>
         </section>
     </main>
+    <footer class="h-50">
+        <div class="bg-dark  mt-5 d-flex justify-content-around align-items-center ">
+            <div >
+                <p class="text-gray pt-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, <span
+                        class="text-blue">tenetur.</span></p>
+            </div>
+            <div class="pt-5">
+                <i class="fa-brands fa-facebook-f me-2 fs-5" style="color: #a7a7a7;"></i>
+                <i class="fa-brands fa-twitter me-2" style="color: #a7a7a7;"></i>
+                <i class="fa-solid fa-basketball me-2" style="color: #a7a7a7;"></i>
+                <i class="fa-solid fa-poo " style="color: #a7a7a7;"></i>
+            </div>
+        </div>
+    </footer>
+    
 </body>
 
 </html>
